# ospab.os

./: .gitignore  ANSWER.md  GITHUB_UPLOAD.md  LICENSE  README.md  answer2.md  answer3.md  build_iso.sh  fix.md  limine.conf  ospab-os.iso  popa.md  pr.md  production-ready.md  qemu_out.txt  review.md  tmpclaude-5ae2-cwd  x86_64-os.json  x86_64-ospab_os.json
kernel/: Cargo.toml  build.rs  build.sh  build_iso.sh  build_with_alloc.sh  kernel.elf  limine.cfg  linker.ld  ospab-new.iso  ospab-os-new.iso  ospab-os.iso  rebuild.sh  review.md  x86_64-ospab.json
kernel/initrd/: README.md  test.txt
kernel/iso_build/boot/: ospab-os
kernel/iso_extract/: limine_root_new.cfg
kernel/iso_root/: kernel  kernel.elf  limine-bios.sys  limine.cfg  limine.conf
kernel/iso_root/initrd/: README.md
kernel/iso_root/limine/: limine.cfg  limine.conf
kernel/isos/: ovmf_vars.fd
kernel/scripts/: build_iso.ps1
kernel/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  page_table.rs  power.rs  shell.rs
kernel/src/apps/: coreutils.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/auth/: mod.rs
kernel/src/boot/: limine.rs  limine_header.S  mod.rs
kernel/src/common/: mod.rs  types.rs
kernel/src/doom/: mod.rs  task.rs  v015.rs
kernel/src/doomgeneric/: README.md  build.rs  doomgeneric.c  doomgeneric.h  doomgeneric_syscalls.c  doomgeneric_syscalls.h  ffi.rs  mod.rs
kernel/src/drivers/: font_data.rs  framebuffer.rs  gen_font.py  keyboard.rs  mod.rs  serial.rs  timer.rs  vga_buffer.rs
kernel/src/fs/: fd.rs  mod.rs  tar.rs  vfs.rs
kernel/src/grape/: mod.rs
kernel/src/interrupt/: idt.rs  (+2 more)
(+255 files in other folders)
